@startuml

title __OBST's Class Diagram__\n

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Apfel {
          - susgrad : int
          + Apfel()
          + getSusgrad()
      }
    }
  }
  

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Birne {
          + Birne()
          + getInfo()
      }
    }
  }
  

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Obst {
          - gattung : int
          + Obst()
          + getGattung()
          + getSusgrad()
      }
    }
  }
  

  com.wolda.Obst.Apfel -up-|> com.wolda.Obst.Obst
  com.wolda.Obst.Birne -up-|> com.wolda.Obst.Obst


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
